--- a/core/templates/core/scanreport.html
+++ b/core/templates/core/scanreport.html
@@ -10,6 +10,7 @@
     <link href="{%static 'styles.css'%}" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
 
 </head>
 
@@ -80,7 +81,16 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Network vulnerability scan</h1>
+                    {%for item in scan_data%}
+                        {%if item.2 == 0%}
+                            <h1 class="mt-4">Network vulnerability scan</h1>
+                        {%elif item.2 == 1%}
+                            <h1 class="mt-4">Host discovery scan</h1>
+                        {%else%}
+                            <h1 class="mt-4">Web vulnerability scan</h1>
+                        {%endif%}
+                       
+                    {%endfor%}
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item"><a href="{%url 'dashboard'%}">Dashboard</a></li>
                         {%for item in scan_data%}
@@ -97,9 +107,11 @@
                                         {%for item in scan_data%}
                                             <li class="list-group-item">Scan name : {{item.1}}</li>
                                             {%if item.2 == 0%}
-                                                <li class="list-group-item">Scan Type : Network Vulnerability scan</li>
+                                                <li class="list-group-item">Scan Type : Network vulnerability scan</li>
+                                            {%elif item.2 == 1%}
+                                                <li class="list-group-item">Scan Type : Host discovery scan</li>
                                             {%else%}
-                                                <li class="list-group-item">Scan Type : Host Discovery scan</li>
+                                                <li class="list-group-item">Scan Type : Web vulnerability scan</li>
                                             {%endif%}
 
                                             {%if item.3 == 0%}
@@ -107,7 +119,7 @@
                                             {%else%}
                                                 <li class="list-group-item">Scan name : In progress</li>
                                             {%endif%}
-                                            <li class="list-group-item">IP / Subnet : {{item.4}}</li>
+                                            <li class="list-group-item">Target : {{item.4}}</li>
                                             <li class="list-group-item">Done by : {{user_name}}</li>
                                             
                                             <li class="list-group-item">Scan Date : {{item.6}}</li>
@@ -133,7 +145,13 @@
                     </div>
                     
                     <div class="card mb-4">
-                        <div class="card-header">Result summary</div>
+                        {% if scan_type == 0 %}
+                            <div class="card-header">Result summary</div>
+                        {% elif scan_type == 1 %}
+                            <div class="card-header">Discoverd hosts</div>
+                        {% elif scan_type == 2 %}
+                            <div class="card-header">Findings</div>    
+                        {%endif%}
                         <div class="card-body">
 
                             {% comment %} netwotk vuln table start {% endcomment %}
@@ -191,6 +209,26 @@
                                 </table>
                             </div>
                             {% comment %} host Discovery table end {% endcomment %}
+
+                            {% comment %} web vulnerability table start {% endcomment %}
+                            {%elif scan_type == 2 %} 
+                                <div class="table" id="table">
+                                    <table id="datatablesSimple">
+                                        <thead>
+                                            <tr>
+                                                <th>Subdirectories</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {%for dir in results_subdirs%}
+                                            <tr>
+                                                <td><a href="{{dir.2}}" target="_blank">{{dir.2}}</a></td>
+                                            </tr>
+                                            {%endfor%}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            {% comment %} web vulnerability table end {% endcomment %}
                             {%endif%}
                         </div>
                     </div>
@@ -255,7 +293,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="{%static 'scripts.js' %}"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    <script src="{%static 'datatables-simple-demo.js' %}"></script>
 </body>
 
 </html>
