--- a/core/templates/core/scans.html
+++ b/core/templates/core/scans.html
@@ -87,5 +87,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="{%static 'scripts.js'%}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script>
+            function toggleSelectOptions() {
+                var checkbox = document.getElementById("subdomain_enum");
+                var selectOptions = document.getElementById("dig_level");
+                if (checkbox.checked) {
+                    selectOptions.style.display = "block";
+                } else {
+                    selectOptions.style.display = "none";
+                }
+            }
+        </script>
     </body>
 </html>
