--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -106,13 +106,31 @@
 
                             <div class="col-xl-3 col-md-6">
                                 <div class="card text-center text-grey mb-4"  style="width: 16rem; height: 20rem;">
+                                    <img class="card-img-top mx-auto " style="width: 9rem; height: 12rem;" src="{%static "sql.png"%}" alt="Card image cap">
+                                    <div class="card-body" >
+                                        <p class="card-text">SQL injection tool</p>
+                                        <a href="#" class="btn btn-primary">New scan</a>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card text-center text-grey mb-4"  style="width: 16rem; height: 20rem;">
                                     <img class="card-img-top mx-auto " style="width: 9rem; height: 12rem;" src="{%static "infrastructure.png"%}" alt="Card image cap">
                                     <div class="card-body" >
                                         <p class="card-text">Infrastructure scan</p>
                                         <a href="#" class="btn btn-primary">New scan</a>
                                     </div>
                                 </div>
-                            </div>       
+                            </div>  
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card text-center text-grey mb-4"  style="width: 16rem; height: 20rem;">
+                                    <img class="card-img-top mx-auto " style="width: 9rem; height: 12rem;" src="{%static "malware.png"%}" alt="Card image cap">
+                                    <div class="card-body" >
+                                        <p class="card-text">MS17-010 (wannacry) scan</p>
+                                        <a href="#" class="btn btn-primary">New scan</a>
+                                    </div>
+                                </div>
+                            </div>      
                         </div>
                     </div>
                 </main>
