--- a/core/templates/core/scanreport.html
+++ b/core/templates/core/scanreport.html
@@ -83,16 +83,16 @@
                 <div class="container-fluid px-4">
                     {%for item in scan_data%}
                         {%if item.2 == 0%}
-                            <h1 class="mt-4">Network vulnerability scan</h1>
+                            <h1 class="mt-4">Network vulnerability scan report</h1>
                         {%elif item.2 == 1%}
-                            <h1 class="mt-4">Host discovery scan</h1>
+                            <h1 class="mt-4">Host discovery scan report</h1>
                         {%else%}
-                            <h1 class="mt-4">Web vulnerability scan</h1>
+                            <h1 class="mt-4">Web vulnerability scan report</h1>
                         {%endif%}
                        
                     {%endfor%}
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a href="{%url 'dashboard'%}">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="{%url 'myscans'%}">My scans</a></li>
                         {%for item in scan_data%}
                             <li class="breadcrumb-item active">{{item.1}}</li>
                         {%endfor%}
@@ -123,7 +123,14 @@
                                             <li class="list-group-item">Done by : {{user_name}}</li>
                                             
                                             <li class="list-group-item">Scan Date : {{item.6}}</li>
-                                            <li class="list-group-item">PDF : <a href="#"><i class="fa-solid fa-file-export"></i></a></li>
+                                            {%if item.7 == 0%}
+                                                <li class="list-group-item">PDF : <a href="#"><i class="fa-solid fa-file-export"></i></a></li>
+                                            {%elif item.7 == 1%}
+                                                <li class="list-group-item">No result found (Reason : no open ports discoverd on target)</li>
+                                            {%elif item.8 == 1%}
+                                                <li class="list-group-item">No result found (Reason : no vulnerabilites found on target)</li>
+                                            {%endif%}
+                                            
                                             
                                         {%endfor%}
                                       </ul>
@@ -143,109 +150,112 @@
                         {%endif%}
 
                     </div>
-                    
-                    <div class="card mb-4">
-                        {% if scan_type == 0 %}
-                            <div class="card-header">Result summary</div>
-                        {% elif scan_type == 1 %}
-                            <div class="card-header">Discoverd hosts</div>
-                        {% elif scan_type == 2 %}
-                            <div class="card-header">Findings</div>    
+                    {%for item in scan_data%}
+                        {%if item.7 == 0%}
+                            <div class="card mb-4">
+                                {% if scan_type == 0 %}
+                                    <div class="card-header">Result summary</div>
+                                {% elif scan_type == 1 %}
+                                    <div class="card-header">Discoverd hosts</div>
+                                {% elif scan_type == 2 %}
+                                    <div class="card-header">Findings</div>    
+                                {%endif%}
+                                <div class="card-body">
+
+                                    {% comment %} netwotk vuln table start {% endcomment %}
+                                    {% if scan_type == 0 %}
+                                    <div class="table" id="table">
+                                        <table id="scan_result">
+                                            <thead>
+                                                <tr>
+                                                    <th style="padding: 5px;">CVE ID</th>
+                                                    <th style="padding: 5px;">Service</th>
+                                                    <th style="padding: 5px;">Version</th>
+                                                    <th style="padding: 5px;">Port</th>     
+                                                    <th style="padding: 5px;">Attack complexity</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tablebody">
+                                                {%for item in report_data%}
+                                                <tr>
+                                                    <td style="padding: 5px;">{{ item.5 }}</td>
+                                                    <td style="padding: 5px;">{{ item.3 }}</td>
+                                                    <td style="padding: 5px;">{{ item.4 }}</td>
+                                                    <td style="padding: 5px;">{{ item.2 }}</td>
+                                                    {%for cve in cve_data%}
+                                                        {%if cve.0 == item.5%}
+                                                            <td style="padding: 5px;">{{ cve.4 }}</td>
+                                                        {%endif%}
+                                                    {%endfor%}
+                                                </tr>
+                                            
+                                                {%endfor%}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    
+                                    {% comment %} network vuln table end {% endcomment %}
+                                    {% comment %} host Discovery table start {% endcomment %}
+                                    {%elif scan_type == 1 %} 
+                                    <div class="table" id="table">
+                                        <table id="scan_result">
+                                            <thead>
+                                                <tr>
+                                                    <th style="padding: 5px;">IP address</th>
+                                                    <th style="padding: 5px;">MAC address</th>     
+                                                    <th style="padding: 5px;">Device name</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tablebody">
+                                                {%for item in results%}
+                                                <tr>
+                                                    <td style="padding: 5px;">{{ item.1 }}</td>
+                                                    <td style="padding: 5px;">{{ item.2 }}</td>
+                                                    <td style="padding: 5px;">{{ item.3 }}</td>
+                                                {%endfor%}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    {% comment %} host Discovery table end {% endcomment %}
+
+                                    {% comment %} web vulnerability table start {% endcomment %}
+                                    {%elif scan_type == 2 %} 
+                                        
+                                            <table  class="table table-bordered" >
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">Subdirectories Found <a href="#"><i class="fa-solid fa-file-export" style="margin-left: 20px"></i> Export txt </a> </th>
+                                                        
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {%for dir in results_subdirs%}
+                                                    <tr>
+                                                        <td><a href="{{dir.2}}" target="_blank">{{dir.2}}</a></td>
+                                                    </tr>
+                                                    {%endfor%}
+                                                </tbody>
+                                            </table>
+                                            <table  class="table table-bordered" >
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">Subdomains Found <a href="#"><i class="fa-solid fa-file-export" style="margin-left: 20px"></i> Export txt </a></th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {%for sub in results_subdomains%}
+                                                    <tr>
+                                                        <td><a href="{{sub.2}}" target="_blank">{{sub.2}}</a></td>
+                                                    </tr>
+                                                    {%endfor%}
+                                                </tbody>
+                                            </table>
+                                    {% comment %} web vulnerability table end {% endcomment %}
+                                    {%endif%}
+                                </div>
+                            </div>
                         {%endif%}
-                        <div class="card-body">
-
-                            {% comment %} netwotk vuln table start {% endcomment %}
-                            {% if scan_type == 0 %}
-                            <div class="table" id="table">
-                                <table id="scan_result">
-                                    <thead>
-                                        <tr>
-                                            <th style="padding: 5px;">CVE ID</th>
-                                            <th style="padding: 5px;">Service</th>
-                                            <th style="padding: 5px;">Version</th>
-                                            <th style="padding: 5px;">Port</th>     
-                                            <th style="padding: 5px;">Attack complexity</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tablebody">
-                                        {%for item in report_data%}
-                                        <tr>
-                                            <td style="padding: 5px;">{{ item.5 }}</td>
-                                            <td style="padding: 5px;">{{ item.3 }}</td>
-                                            <td style="padding: 5px;">{{ item.4 }}</td>
-                                            <td style="padding: 5px;">{{ item.2 }}</td>
-                                            {%for cve in cve_data%}
-                                                {%if cve.0 == item.5%}
-                                                    <td style="padding: 5px;">{{ cve.4 }}</td>
-                                                {%endif%}
-                                            {%endfor%}
-                                        </tr>
-                                       
-                                        {%endfor%}
-                                    </tbody>
-                                </table>
-                            </div>
-                            
-                            {% comment %} network vuln table end {% endcomment %}
-                            {% comment %} host Discovery table start {% endcomment %}
-                            {%elif scan_type == 1 %} 
-                            <div class="table" id="table">
-                                <table id="scan_result">
-                                    <thead>
-                                        <tr>
-                                            <th style="padding: 5px;">IP address</th>
-                                            <th style="padding: 5px;">MAC address</th>     
-                                            <th style="padding: 5px;">Device name</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tablebody">
-                                        {%for item in results%}
-                                        <tr>
-                                            <td style="padding: 5px;">{{ item.1 }}</td>
-                                            <td style="padding: 5px;">{{ item.2 }}</td>
-                                            <td style="padding: 5px;">{{ item.3 }}</td>
-                                        {%endfor%}
-                                    </tbody>
-                                </table>
-                            </div>
-                            {% comment %} host Discovery table end {% endcomment %}
-
-                            {% comment %} web vulnerability table start {% endcomment %}
-                            {%elif scan_type == 2 %} 
-                                
-                                    <table  class="table table-bordered" >
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Subdirectories Found <a href="#"><i class="fa-solid fa-file-export" style="margin-left: 20px"></i> Export txt </a> </th>
-                                                
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {%for dir in results_subdirs%}
-                                            <tr>
-                                                <td><a href="{{dir.2}}" target="_blank">{{dir.2}}</a></td>
-                                            </tr>
-                                            {%endfor%}
-                                        </tbody>
-                                    </table>
-                                    <table  class="table table-bordered" >
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Subdomains Found <a href="#"><i class="fa-solid fa-file-export" style="margin-left: 20px"></i> Export txt </a></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {%for sub in results_subdomains%}
-                                            <tr>
-                                                <td><a href="{{sub.2}}" target="_blank">{{sub.2}}</a></td>
-                                            </tr>
-                                            {%endfor%}
-                                        </tbody>
-                                    </table>
-                            {% comment %} web vulnerability table end {% endcomment %}
-                            {%endif%}
-                        </div>
-                    </div>
+                    {%endfor%}
                     {%for cve in cve_data%}
                     <div class="card mb-4">
                         <div class="card-header">CVE ID : {{cve.0}}</div>
@@ -261,7 +271,7 @@
                                 </li>
 
                                 <li class="list-group-item">
-                                   <b> Network Impact Score : </b> {{cve.3}}
+                                   <b> Network Impact Score : </b> <p id="impact"> {{cve.3}} </p>
                                 </li>
 
                                 <li class="list-group-item">
