--- a/core/templates/core/my_workspaces.html
+++ b/core/templates/core/my_workspaces.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Netpackt | {%block scan_title%} {%endblock%}</title>
+        <title>Netpackt | my workspaces</title>
+        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{%static 'styles.css'%}" rel="stylesheet"/>
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
@@ -54,7 +55,7 @@
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="{%url 'myscans'%}">My scans</a>
-                                    <a class="nav-link" href="{%url 'sharedscans'%}">Shared Scans</a>
+                                    <a class="nav-link" href="layout-sidenav-light.html">Shared Scans</a>
                                 </nav>
                             </div>
 
@@ -78,13 +79,81 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                {%block scan_content%}
+                <main>
+                    <div class="container-fluid px-4">
+                        <h1 class="mt-4">My workspaces</h1>
+                        <ol class="breadcrumb mb-4">
+                            <li class="breadcrumb-item"><a href="#">Workspace</a></li>
+                            <li class="breadcrumb-item active">My Workspaces</li>
+                        </ol>
+                        <div class="row ">
+                            <div class="col">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-table me-1"></i>
+                                        Available workspaces
+                                    </div>
+                                    <div class="card-body">
+                                        <table id="datatablesSimple">
+                                            <thead>
+                                                <tr>
+                                                    <th>Workspace name</th>
+                                                    <th>Created at</th>
+                                                    <th>Actions</th>
 
-                {%endblock%}
+                                                </tr>
+                                            </thead>
+
+                                            <tbody>
+                                                {%for workspace in workspaces%}
+                                                    <tr> 
+                                                        <td>{{workspace.1}}</td>
+                                                        <td>{{workspace.2}}</td>
+                                                        <td>
+                                                            <a href="#" style="margin: 10px;"><i class="fa-solid fa-eye"></i></a>
+                                                            <a href="{% url 'workspace' workspace.0 %}" style="margin: 10px;"><i class="fa-regular fa-pen-to-square"></i></a>
+                                                            <a href="{% url 'delete_workspace' workspace.0 %}" style="margin: 10px;"><i class="fa-solid fa-trash-can"></i></a>
+
+                                                        </td>
+                                                    </tr>
+                                                {%endfor%}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-header">
+                                        Create new workspace
+                                    </div>
+                                    <div class="card-body">
+                                        <form method="POST" action=".">
+                                            {% csrf_token %}
+                                            <div class="row m-3">
+                                                <div class="col">
+                                                    <label class="my-1 mr-2" for="workspace_name">Workspace Name</label>
+                                                    <input type="text" id="workspace_name" name="workspace_name" class="form-control" placeholder="EX : my workspace">
+                                                  </div>
+                                            </div>
+                                            <div class="row m-3">
+                                                <div class ="col " style="text-align:center;">
+                                                    <button type="submit" class="btn btn-primary btn-lg">Add workspace</button>
+                                                </div>
+                                            <div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+                </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Netpackt 2024</div>
+                            <div class="text-muted">Copyright &copy; NetPackt 2024</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
@@ -95,20 +164,10 @@
                 </footer>
             </div>
         </div>
-        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="{%static 'scripts.js'%}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-        <script>
-            function toggleSelectOptions() {
-                var checkbox = document.getElementById("subdomain_enum");
-                var selectOptions = document.getElementById("dig_level");
-                if (checkbox.checked) {
-                    selectOptions.style.display = "block";
-                } else {
-                    selectOptions.style.display = "none";
-                }
-            }
-        </script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+        <script src="{%static 'datatables-simple-demo.js' %}"></script>
     </body>
 </html>
