--- a/core/templates/core/setting.html
+++ b/core/templates/core/setting.html
@@ -66,6 +66,18 @@
                                 <a class="nav-link" href="{%url 'sharedscans'%}">Shared Scans</a>
                             </nav>
                         </div>
+
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-object-ungroup"></i></div>
+                            Workspace
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="{%url 'myscans'%}">My Workspaces</a>
+                                <a class="nav-link" href="{%url 'sharedscans'%}">Shared Workspaces</a>
+                            </nav>
+                        </div>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
