--- a/core/templates/core/waf_enum.html
+++ b/core/templates/core/waf_enum.html
@@ -6,7 +6,7 @@
         <h1 class="mt-4">Web vulnerability scan</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="{%url 'dashboard'%}">Dashboard</a></li>
-            <li class="breadcrumb-item active">Web vulnerability scan</li>
+            <li class="breadcrumb-item active">WAF Enumeration scan</li>
         </ol>
         <div class="card mb-4">
             <div class="card-body">
