--- a/core/static/home.css
+++ b/core/static/home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #add8e6;
+    background-color: #373737;
 }
 
 .header {
@@ -7,9 +7,41 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background-color: #1d4ca3; 
+    background-color: #202020; 
     color: #fff; 
 }
+.header-button{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #444444; 
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.header-button:hover {
+    background-color: #8a0303;
+  }
+  .header-button2{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #8a0303; 
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.header-button2:hover {
+    background-color: #444444; 
+  }
+.header-text1 {
+    color:#fff; 
+}
+.header-text1:hover{
+    color:  #8a0303;
+  }
 
 .logo {
     font-size: 24px;
@@ -42,6 +74,23 @@ main {
     padding: 40px;
 }
 
+a:link{
+    text-decoration: none;
+    color: #fff;
+  }
+a:visited {
+    text-decoration: none;
+    color: #fff;
+  }
+a:hover{
+    text-decoration: none;
+    color: #fff;
+  }
+a:active {
+    text-decoration: none;
+    color: #fff;
+  }
+
 /* Introduction section */
 .intro {
     display: flex;
@@ -67,16 +116,16 @@ main {
 }
 
 .intro button {
-    padding: 10px 20px;
+    padding: 10px 35px;
     border: none;
     border-radius: 5px;
-    background-color: #4169e1;
+    background-color: #8a0303;
     color: #fff; 
     cursor: pointer;
 }
 
 .intro button:hover {
-    background-color: #1d4ca3;
+    background-color: #2c2c2c;
 }
 
 /* Features section */
@@ -95,19 +144,19 @@ main {
 
 .feature i {
     font-size: 48px;
-    color: #4169e1;
+    color: #202020;
 }
 
 .feature-heading {
     font-size: 24px;
     font-weight: bold;
-    color: #4169e1; 
+    color: #000000; 
     margin: 10px 0;
 }
 
 .feature-text {
     font-size: 18px;
-    color: #1d4ca3; 
+    color: #000000; 
     text-align: center;
 }
 
@@ -126,13 +175,13 @@ main {
 .about-text h2 {
     font-size: 36px;
     font-weight: bold;
-    color: #4169e1;
+    color: #000000;
     margin: 0;
 }
 
 .about-text p {
     font-size: 18px;
-    color: #1d4ca3; 
+    color: black; 
     margin: 10px 0;
 }
 
@@ -151,7 +200,7 @@ main {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background-color: #4169e1;
+    background-color: #1a1a1a;
     color: #fff; 
 }
 
