--- a/core/static/oops.css
+++ b/core/static/oops.css
@@ -47,7 +47,7 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background: #2980b9;
+  background: #333333;
   height: 100vh;
 }
 .center {
@@ -57,9 +57,12 @@ body {
   transform: translate(-50%, -50%);
   max-width: 420px;
   width: 100%;
-  background: white;
+  background: #333333;
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+}
+.bg-custom-primary {
+  background-color: #202020;
 }
 .center h1 {
   text-align: center;
@@ -101,13 +104,13 @@ form .txt_field {
   left: 0;
   width: 0%;
   height: 2px;
-  background: #2691d9;
+  background: #8a0303;
   transition: 0.5s;
 }
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label {
   top: -5px;
-  color: #2691d9;
+  color: #8a0303;
 }
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before {
@@ -127,7 +130,7 @@ form .txt_field {
 input[type="submit"] {
   width: 100%;
   height: 50px;
-  background-color: #2691d9;
+  background-color: #8a0303;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -138,16 +141,16 @@ input[type="submit"] {
   border: none;
 }
 input[type="submit"]:hover {
-  background-color: #115785;
+  background-color: #8a0303;
 }
 .signup_link {
   margin: 30px 0;
   text-align: center;
   font-size: 16px;
-  color: #666666;
+  color: black;
 }
 .signup_link a {
-  color: #2691d9;
+  color: #8a0303;
   text-decoration: none;
 }
 .signup_link a:hover {
@@ -156,7 +159,7 @@ input[type="submit"]:hover {
 .pass-reset-p{
   text-align: center;
   font-size: 24px;
-  color: #666666;
+  color: #8a0303;
   padding: 30px;
 }
 .pass-reset-p a{
