--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -17,13 +17,14 @@
 
 <body>
     <header class="header">
-        <h2 class="logo">Netpackt</h2>
+        <h2><a href="{%url 'home'%}" >Netpackt</a></h2>
         <nav class="nav-items">
+            <a href="{%url 'dashboard'%}">Dashboard</a>
             <a href="#">Help</a>
             <a href="#About">About</a>
             <a href="#Contact">Contact</a>
-            <a href="{%url 'login'%}" class="btn btn-primary">Login</a>
-            <a href="{%url 'register'%}" class="btn btn-secondary">Sign Up</a>
+            <a href="{%url 'login'%}" class="header-button"> Login </a>
+            <a href="{%url 'register'%}" class="header-button2">Sign Up</a>
         </nav>
     </header>
     <main>
@@ -63,7 +64,7 @@
                     you suggestions and recommendations on how to improve your network and web security and performance.</p>
             </div>
             <div class="about-image">
-                <img src="{%static 'Netpackt.png'%}" alt="Netpackt logo">
+                <img src="{%static 'Image.png'%}" alt="Netpackt logo">
             </div>
         </div>
     </main>
