--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -8,14 +8,14 @@
       window.location.href = "{% url 'dashboard' %}"; 
   </script>
 {%else%}
-<body class="bg-primary">
+<body class="bg-custom-primary">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
-            
+
             <div class="center">
 
                 <h1>Login</h1>
-
+                
                 <form method="post">
                     {%csrf_token%}
                     {% for message in messages %}
@@ -49,7 +49,7 @@
                     .show {
                         display: block;
                     }
-                    
+
                     .hide {
                         display: none;
                     }
